api_versioned_docs/version-12.0.0/avalonia/media/textformatting/texttrailingcharacterellipsis.mdx
---
title: 'TextTrailingCharacterEllipsis'
hide_title: true
slug: '/avalonia/media/textformatting/texttrailingcharacterellipsis'
uid: 'Avalonia.Media.TextFormatting.TextTrailingCharacterEllipsis'
commentId: 'T:Avalonia.Media.TextFormatting.TextTrailingCharacterEllipsis'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media.TextFormatting'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextTrailingCharacterEllipsis Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Media.TextFormatting</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

A collapsing properties to collapse whole line toward the end
at character granularity.

</div>

<div className="apiref-page__signature">

```csharp
public class TextTrailingCharacterEllipsis
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="textcollapsingproperties">TextCollapsingProperties</a> <span className="apiref-page__relation-separator">-&gt;</span> TextTrailingCharacterEllipsis
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [TextTrailingCharacterEllipsis](#uid-40fd8c0b53) | Construct a text trailing character ellipsis collapsing properties |

<section className="apiref-page__member-entry">

<span id="uid-40fd8c0b53"></span>

### TextTrailingCharacterEllipsis Constructor

Construct a text trailing character ellipsis collapsing properties

```csharp
public TextTrailingCharacterEllipsis(string ellipsis, double width, Avalonia.Media.TextFormatting.TextRunProperties textRunProperties, Avalonia.Media.FlowDirection flowDirection)
```

#### Parameters

`ellipsis` string

Text used as collapsing symbol.


`width` double

Width in which collapsing is constrained to.


`textRunProperties` [Avalonia.Media.TextFormatting.TextRunProperties](xref:Avalonia.Media.TextFormatting.TextRunProperties)

Text run properties of ellipsis symbol.


`flowDirection` [Avalonia.Media.FlowDirection](xref:Avalonia.Media.FlowDirection)

The flow direction of the collapsed line.


</section>

## Methods

| Name | Description |
| --- | --- |
| [Collapse](#uid-8d20e78190) | Collapses given text line. |
| [CreateCollapsedRuns](textcollapsingproperties.mdx#uid-3f1ae847f7) | Creates a list of runs for given collapsed length which includes specified symbol at the end. Inherited from [TextCollapsingProperties](textcollapsingproperties.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-8d20e78190"></span>

### Collapse Method

Collapses given text line.

```csharp
public Avalonia.Media.TextFormatting.TextRun[] Collapse(Avalonia.Media.TextFormatting.TextLine textLine)
```

#### Parameters

`textLine` [Avalonia.Media.TextFormatting.TextLine](xref:Avalonia.Media.TextFormatting.TextLine)

Text line to collapse.


#### Returns

[Avalonia.Media.TextFormatting.TextRun](xref:Avalonia.Media.TextFormatting.TextRun)[]


</section>

## Properties

| Name | Description |
| --- | --- |
| [FlowDirection](#uid-d34c47a868) | No summary available. |
| [Symbol](#uid-3a03e2f9b1) | Gets the text run that is used as collapsing symbol. |
| [Width](#uid-e3dc461893) | Gets the width in which the collapsible range is constrained to. |

<section className="apiref-page__member-entry">

<span id="uid-d34c47a868"></span>

### FlowDirection Property

```csharp
public Avalonia.Media.FlowDirection FlowDirection { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3a03e2f9b1"></span>

### Symbol Property

Gets the text run that is used as collapsing symbol.

```csharp
public Avalonia.Media.TextFormatting.TextRun Symbol { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e3dc461893"></span>

### Width Property

Gets the width in which the collapsible range is constrained to.

```csharp
public double Width { get; set; }
```

</section>

</ApiRefPage>

